fix: no wrapping for country name in country selector

--- a/src/stylus/mixins/country-selector.styl
+++ b/src/stylus/mixins/country-selector.styl
@@ -59,6 +59,7 @@ big-screen-mixin()
       p
         color: $navColorPrimary
         padding: 0 10px
+        white-space: nowrap
       svg
         fill: $toggleArrowColor
         width: 12px
